feat(FS-214): Profile fullname
